Fix looks on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ body {
     max-width: 700px ;
 }
 
+@media (max-width: 550px) {
+    body {
+        margin: 0 20px;
+    }
+
+    .main {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+}
+
 .main a {
     color: inherit;
     text-decoration: none;
@@ -46,7 +57,7 @@ ul {
     margin: 0 0 0 -1em;
     padding: 0;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: flex-end;
 }
 
